--- a/style.css
+++ b/style.css
@@ -6,17 +6,34 @@
 
 }
 
+h1 {
+    font-size: 60px;
+    font-family: font-family: 'Oswald', sans-serif;
+    ;
+}
+
+h2 {
+    font-size: 40px;
+}
+
+h3 {
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+p {
+    font-size: 20px;
+}
+
 #banner {
     background-image: url(images/banner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
     height: 100vh;
     position: relative;
     color: #232a33;
     z-index: -1;
-
-
-
 }
 
 .hero-section {
@@ -25,17 +42,6 @@
     transform: translateY(-50%);
     width: 50%;
     margin: 0 40px;
-}
-
-.hero-section h1 {
-    font-size: 5rem;
-    font-family: 'Oswald', sans-serif;
-
-
-}
-
-.hero-section p {
-    font-size: 1.5rem;
 }
 
 .link {
@@ -70,29 +76,37 @@
     padding: 60px 20px;
 }
 
-.care-card img {
-    height: 100px;
-    width: 100px;
-}
-
 .care-card h3 {
-    text-transform: uppercase;
     margin-bottom: 10px;
-    font-size: 30px;
 }
 
-.care-card p {
-    font-size: 20px;
+.services-head {
+    width: 60%;
+    margin: 60px auto;
+    text-align: center;
 }
 
-.first {
-    background-color: #CCD3DB;
+.service-body {
+    display: flex;
+    width: 80%;
+    margin: 20px auto;
 }
 
-.second {
-    background-color: #858E99;
+.service-half {
+    width: 50%;
 }
 
-.third {
-    background-color: #555D66;
+.right img {
+    width: 100%;
+    height: auto;
+}
+
+.service-container {
+    display: flex;
+    margin: 20px 0px;
+}
+
+.container-text {
+    margin-left: 15px;
+    padding: 10px;
 }
