--- a/style.css
+++ b/style.css
@@ -8,17 +8,24 @@
 
 h1 {
     font-size: 60px;
+
     font-family: font-family: 'Oswald', sans-serif;
     ;
 }
 
 h2 {
     font-size: 40px;
+    text-transform: uppercase;
+    padding: 15px;
 }
 
 h3 {
     font-size: 30px;
     text-transform: uppercase;
+}
+
+h4 {
+    font-size: 25px;
 }
 
 p {
@@ -73,7 +80,8 @@ p {
 }
 
 .care-card {
-    padding: 60px 20px;
+    padding: 10% 2%;
+    color: white;
 }
 
 .care-card h3 {
@@ -109,4 +117,48 @@ p {
 .container-text {
     margin-left: 15px;
     padding: 10px;
+}
+
+#department {
+    background-color: #858E99;
+    color: white;
+    text-align: center;
+}
+
+.department-head {
+    width: 60%;
+    margin: 0 auto;
+    padding: 6%;
+
+}
+
+.department-body {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 5%;
+}
+
+#eyecare {
+    display: flex;
+    padding: 5%;
+}
+
+.eyecare-image {
+    width: 50%;
+
+
+}
+
+.eyecare-desc {
+    width: 50%;
+    padding: 10% 5%;
+
+
+}
+
+.eyecare-image img {
+    width: 100%;
+    height: auto;
 }
